Alterações para subir na vps